syntax = "proto3";

option csharp_namespace = "MangaPlanetto.Cms.Api";
import "google/api/annotations.proto";

package manga;

//My amazing fantastic TestMangaService
service Manga{
	rpc GetManga(GetMangaRequest) returns (GetMangaResponse)
	{
		option (google.api.http) = {
		  get: "/v1/manga/{manga_id}"
		};
	}
	rpc UpdateMangaPrice(UpdateMangaPriceRequest) returns (UpdatedMangaResponse)
	{
		option (google.api.http) = {
		  post: "/v1/manga"
		  body: "*"
		};
	}
} 

message GetMangaRequest{
	string manga_id = 1;
}

message GetMangaResponse{
	string manga_id = 1;
	string title = 2;
	GrpcPrice price = 3;
}

message UpdateMangaPriceRequest{
	string manga_id = 1;
	GrpcPrice price = 2;
}

message UpdatedMangaResponse{
	string manga_id = 1;
}

message GrpcPrice{
	float amount = 1;
	string currency = 2;
}
